correct ans visible

--- a/src/css/basic.css
+++ b/src/css/basic.css
@@ -58,3 +58,6 @@ button:active{
 #timer{
     text-align: center;
 }
+.answer-section{
+    visibility: hidden;
+}
